# src/main/java/com/pragma/powerup/application/dto/response/RestaurantResponseDto.java
@@ -1,0 +1,16 @@
+package com.pragma.powerup.application.dto.response;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class RestaurantResponseDto {
+  private Long id;
+  private String name;
+  private String nit;
+  private String address;
+  private String phone;
+  private String logoUrl;
+  private Long ownerId;
+}
